# cast_hosting

./: .gitignore  README.md  cast.service  cast.traefik.yml  command_lines.txt  db_creation.txt  deploy.yml  django_cast.traefik.yml  gunicorn.sh  manage.py  pyproject.toml  python_podcast.traefik.yml  secrets.yml  wersdoerfer.traefik.yml
.github/workflows/: deploy.yml
ansible/: deploy.yml
ansible/callback_plugins/: json_cb.py
apps/: views.py
apps/templates/pages/: home.html  site.html
apps/users/: models.py  views.py
apps/users/migrations/: 0002_auto_20210629_1456.py
apps/users/tests/: factories.py  test_urls.py  test_views.py
config/: .wsgi.py.swp  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
fastdeploy/: config.json  env.template.j2  playbook.yml  register.yml  secrets.yml  sudoers.template.j2
