[tool.poetry]
name = "cast_hosting"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
django = "^3.1.2"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
django-allauth = "^0.42.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-django = "^3.10.0"
factory-boy = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
