[tool.poetry]
name = "cast_hosting"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.2"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
django-allauth = "^0.42.0"
whitenoise = "^5.2.0"
django-cast = {git = "https://github.com/ephes/django-cast", branch = "develop"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-django = "^3.10.0"
factory-boy = "^3.1.0"
django-coverage-plugin = "^1.8.0"
coverage = {extras = ["toml"], version = "^5.3"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
exclude = "migrations"

[tool.coverage.run]
include = [
    "apps/*"
]
omit = [
    "*migrations*",
    "*tests*",
]
plugins = [
    "django_coverage_plugin"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
minversion = "6.0"
addopts = "--reuse-db -p no:warnings"
norecursedirs = ".git config"

[tool.isort]
profile = "black"
src_paths = ["apps", "config"]
skip = ["migrations"]
