[tool.poetry]
name = "cast_hosting"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "*"
django-cast = {git = "https://github.com/ephes/django-cast", branch = "develop"}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
pytest-django = "*"
factory-boy = "*"
django-coverage-plugin = "*"
coverage = {extras = ["toml"], version = "*"}
django-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "migrations"

[tool.coverage.run]
include = [
    "apps/*"
]
omit = [
    "*migrations*",
    "*tests*",
]
plugins = [
    "django_coverage_plugin"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
minversion = "6.0"
addopts = "--reuse-db -p no:warnings"
norecursedirs = ".git config"

[tool.isort]
profile = "black"
src_paths = ["apps", "config"]
skip = ["migrations"]
